--- a/deployment/mysql-deployment.yaml
+++ b/deployment/mysql-deployment.yaml
@@ -7,7 +7,8 @@ spec:
     matchLabels:
       app: mysql
   strategy:
-    type: Recreate
+    type: RollingUpdate
+  replicas: 1
   template:
     metadata:
       labels:
@@ -24,7 +25,10 @@ spec:
                   name: mysql-secret
                   key: password
             - name: MYSQL_DATABASE
-              value: worker
+              valueFrom:
+                configMapKeyRef:
+                  name: worker-configmap
+                  key: mysqldb
           ports:
             - containerPort: 3306
               name: mysql
